--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/lang-cpp": "^0.20.0",
+    "@codemirror/lang-javascript": "^0.20.0",
+    "@codemirror/language-data": "^0.20.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^16.11.32",
-    "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@uiw/react-codemirror": "^4.7.0",
     "markdown-to-jsx": "^7.1.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -43,6 +46,11 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react": "^18.0.9",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
+    "eslint": "^8.15.0",
+    "eslint-plugin-react": "^7.29.4"
   }
 }
