--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@codemirror/lang-cpp": "^0.20.0",
     "@codemirror/lang-javascript": "^0.20.0",
     "@codemirror/language-data": "^0.20.0",
+    "@codemirror/theme-one-dark": "^6.0.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
@@ -17,7 +18,6 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -51,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.15.0",
-    "eslint-plugin-react": "^7.29.4"
+    "eslint-plugin-react": "^7.29.4",
+    "react-scripts": "5.0.1"
   }
 }
