--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.11.32",
     "@types/react-dom": "^18.0.3",
     "@uiw/react-codemirror": "^4.10.4",
+    "classnames": "^2.3.1",
     "markdown-to-jsx": "^7.1.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
